feat: implements request flow

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 APP_NAME='Portal Administrativo'
+APP_ENV='staging'
 APP_PORT=8080
 FORWARD_DB_PORT=3306
 FORWARD_REDIS_PORT=6379
 
+DB_HOST=mysql.portal_adm
 DB_DATABASE=portal_adm
 DB_USERNAME=root
 DB_PASSWORD=secret
