--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,16 @@
         "php": "^8.3",
         "ext-pdo": "*",
         "ext-mysqli": "*",
-        "ext-redis": "*"
+        "ext-redis": "*",
+        "vlucas/phpdotenv": "^5.6"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
-        }
+            "Src\\": "src/"
+        },
+        "files": [
+            "src/Helpers/helpers.php"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0"
